use RegisterSize and add vr type

--- a/src/compiler/emit/z80.md
+++ b/src/compiler/emit/z80.md
@@ -26,6 +26,39 @@ By pointing the destination just after the source of LDIR, each iteration copies
     LDIR            // go
 ```
 
+### (Mis)Use the SP as a fast data reader/writer
+
+```asm
+di // no interrupts while SP is pointing somewhere else
+ld ix, 0
+add ix, sp
+
+ld hl, <addr>
+
+loop:
+    // cannot use any instructions that use the 'normal' stack
+    // NO: call, ret, rst etc (push/pop other than for moving data)
+
+    pop de  // reads data (forwards)
+    ld (hl), e
+    inc hl
+    ld (hl), d
+
+    // -or-
+
+    ld e, (hl)
+    inc hl
+    ld d, (hl)
+    push de // writes data (backwards)
+
+    //exit condition
+    jr nz, loop
+
+// restore original sp
+ld sp, ix
+ei
+```
+
 ### Sub-Routine fall-through
 
 ```asm
@@ -57,6 +90,23 @@ sub-routine:
 ```
 
 The RET of proc will ret the sub-routine
+
+### Misuse RET with many jumps to same address
+
+```asm
+    ld hl, <addr>
+    push hl
+
+case1:
+    ...
+    ret
+
+case2:
+    ...
+    ret
+```
+
+Requires one byte (RET) for each jump instead of 2 (JR) or 3 (JP)
 
 ### Convert a HEX number to String
 
