remove old allocation related code

--- a/src/compiler/emit/z80.md
+++ b/src/compiler/emit/z80.md
@@ -38,6 +38,8 @@ ld hl, <addr>
 loop:
     // cannot use any instructions that use the 'normal' stack
     // NO: call, ret, rst etc (push/pop other than for moving data)
+    // * actually you can for write, but the return addresses etc will be placed
+    // in the data-buffer.
 
     pop de  // reads data (forwards)
     ld (hl), e
