add tests for variable parsing and pipeline execution

--- a/src/compiler/emit/z80.md
+++ b/src/compiler/emit/z80.md
@@ -143,3 +143,32 @@ Most of these globber the flags or the regs.
 `RRA    JR C, lbl` check if bit 0 is set
 `RLA    JR C, lbl` check if bit 7 is set
 `PUSH DE   POP BC` copy 16-bit values using the stack
+
+### Math
+
+Multiplication: shifted-add
+
+```txt
+      1110
++--   1101  x
+| -----------
+1     1110
+0    0000     if bit is 0, then all 0
+1   1110
+1  1110     +
+  -----------
+  10110110
+```
+
+Not sure if this will be faster than repeated add?
+
+```txt
+multiply: (a, b)
+  result = 0
+  while b > 0
+    if (b & 1) == 1
+      result += a
+    a <<= 1
+    b >>= 1
+  ret result
+```
