ptr and selstoreseq

--- a/src/compiler/emit/z80.md
+++ b/src/compiler/emit/z80.md
@@ -7,11 +7,17 @@ https://clrhome.org/table/
 - use pluggable assembly 'routines' (without RET) to implement specific constructs and sequences.
     These pluggable routines are text files that the compiler reads and can override compiler-impl.
 
+| Pattern | Action | Description |
+| -- | -- | -- |
+| `LD r, r` (`r`=`r`) | Delete | |
+| `LD {RR}, 1` `ADD HL, RR` | Replace with `INC  HL` | |
+
 ## Instruction Optimization
 
 https://github.com/Zeda/Z80-Optimized-Routines
 https://github.com/bchiha/Ready-Z80/tree/main/05-Z80_Optimisation
 http://z80-heaven.wikidot.com/optimization
+https://tutorials.eeems.ca/Z80ASM/index.htm
 
 ### Use LDIR to init memory
 
