--- a/src/compiler/emit/z80.md
+++ b/src/compiler/emit/z80.md
@@ -12,6 +12,40 @@ https://clrhome.org/table/
 | `LD r, r` (`r`=`r`) | Delete | |
 | `LD {RR}, 1` `ADD HL, RR` | Replace with `INC  HL` | |
 
+## Function Stack Frame
+
+- Normal instruction selection does not change SP (no push/pop).
+- When function calls return SP is unchanged.
+
+```c
+foo: () {
+    arr: u8[] = [1, 2, 3]
+    ptr: u8* = [4, 5, 6]
+}
+```
+
+- (higher memory addresses)
+- SP calling function
+- Stack Frame
+  - Offset: 3 (ptr-init) [4, 5, 6]
+  - Offset: 0 (arr-init) [1, 2, 3]
+  - SP points to last byte stack frame
+- (lower memory addresses)
+
+If no local variables are stack-bound, no prologue and epiloque is generated.
+
+Function Prologue:
+
+- Move SP down to make room for stack frame
+
+Function Body:
+
+- Stack is indexed (offset) from SP upward.
+
+Function Epilogue
+
+- Move SP up to cleanup stack frame
+
 ## Instruction Optimization
 
 https://github.com/Zeda/Z80-Optimized-Routines
